--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>明想解答之卡 - 線上查詢</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/nigelliu1221/oracle-cards/main/images/logo.png">
-    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/nigelliu1221/oracle-cards/main/images/logo.png">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎴</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎴</text></svg>">
     <meta name="description" content="明想解答之卡線上查詢系統，查看60張心靈指引卡片的完整解讀">
     <meta property="og:title" content="明想解答之卡">
     <meta property="og:description" content="輸入卡片編號，查看完整的心靈指引">
