--- a/index.html
+++ b/index.html
@@ -395,10 +395,12 @@
     <div class="container">
         <div class="search-card" id="searchSection">
             <div class="logo">
-                <img src="https://raw.githubusercontent.com/nigelliu1221/oracle-cards/main/images/logo.png" 
-                     alt="明想解答之卡 Logo" 
-                     class="logo-image"
-                     onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
+                <div class="logo-container">
+                    <img src="https://raw.githubusercontent.com/nigelliu1221/oracle-cards/main/images/logo.png" 
+                         alt="明想解答之卡 Logo" 
+                         class="logo-image"
+                         onerror="this.style.display='none'; this.parentElement.parentElement.querySelector('.logo-emoji').style.display='inline';">
+                </div>
                 <span class="logo-emoji" style="display: none;">🎴</span>
             </div>
             <h1>明想解答之卡</h1>
