--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 image: "35-blackbear.png"
             },
             36: {
-                title: "鵂鶹｜行動突破",
+                title: "鸚鵡｜行動突破",
                 reminder: "你不是做不到，只是還沒看清內心卡在哪。",
                 meaning: "行動遲疑，有時並非因為缺乏能力，而是內在有某種潛藏的抗拒或恐懼未被察覺。當你願意傾聽這些聲音，你會發現阻力逐漸鬆動。深入感受，釐清限制，是重新啟動內在行動力的關鍵起點。",
                 practice: "寫下你遲遲未行動的一件事，補上一句：「我擔心的是⋯⋯」，看見背後的情緒。",
